--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,6 @@ a,
 
 /* Navigation bar stlying Section  */
 
-nav,
 .nav-links {
   display: flex;
 }
